--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="프리톡로고.png" type="image/png">
     <style>
+        * {
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+
         body {
             font-family: 'Pretendard', sans-serif;
             margin: 0;
             background-color: #f0f2f5;
             height: 100vh;
+            width: 100vw;
+            /* 너비 고정 */
             display: flex;
             flex-direction: column;
-            overflow: hidden;
+            overflow-x: hidden;
+            /* 가로 스크롤 절대 방지 */
         }
 
         #list-area {
@@ -70,8 +78,10 @@
         #messages li {
             padding: 10px 15px;
             border-radius: 15px;
-            max-width: 70%;
-            word-wrap: break-word;
+            max-width: 85%;
+            /* 너비를 약간 늘리되 화면은 안 넘게 */
+            word-break: break-all;
+            /* 긴 단어도 줄바꿈 */
             position: relative;
             font-size: 0.95rem;
         }
@@ -96,15 +106,16 @@
             bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
-            width: 90%;
-            max-width: 450px;
+            width: 95%;
+            /* 90%에서 95%로 조정하되 border-box라 안 나감 */
+            max-width: 500px;
             background: white;
             border-radius: 30px;
-            padding: 10px 15px;
+            padding: 8px 15px;
             display: flex;
             gap: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            z-index: 100;
+            z-index: 1000;
         }
 
         #form.dragover {
@@ -203,12 +214,11 @@
         // 설치 팝업 제어
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
+            // e.preventDefault(); // 만약 자동으로 뜨는 걸 원하시면 이 줄을 주석처리하세요.
             deferredPrompt = e;
-            // 여기서 사용자에게 설치를 유도하는 버튼을 보여줄 수도 있습니다.
             console.log("설치 가능 상태");
         });
-        
+
         const socket = io();
         let userName = '', currentRoom = '';
 
@@ -301,6 +311,11 @@
         }
 
         function goBack() {
+            // 단순 UI 전환이 아니라 데이터 꼬임 방지를 위해 
+            // 가끔은 새로고침이 필요할 수 있습니다.
+            // 만약 "초기화"를 원하시면 아래 주석을 푸세요.
+            // location.reload(); 
+
             document.getElementById('list-area').style.display = 'flex';
             document.getElementById('chat-area').style.display = 'none';
             document.getElementById('footer-bar').style.display = 'block';
