--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             const list = document.getElementById('messages');
             list.innerHTML = '';
 
-            currentRoom = roomName;
+            currentRoom = '';
             document.getElementById('list-area').style.display = 'none';
             document.getElementById('chat-area').style.display = 'flex';
             document.getElementById('footer-bar').style.display = 'none';
