--- a/index.html
+++ b/index.html
@@ -235,13 +235,14 @@
         socket.on('chat message', (data) => { addMessage(data); });
         socket.on('load messages', (messages) => {
             const list = document.getElementById('messages');
-            list.innerHTML = ''; // 중복 방지를 위해 한 번 더 비움
-            if (messages) {
+            list.innerHTML = ''; // 1. 일단 깨끗하게 비우고
+
+            if (messages && messages.length > 0) {
                 messages.forEach(msg => {
-                    // addMessage를 호출하기 전에 room 정보를 현재 방으로 강제 맞춤
-                    // (필터링 통과를 위해)
-                    msg.room = currentRoom;
-                    addMessage(msg);
+                    // 2. 과거 내역을 그릴 때는 필터링에 걸리지 않도록
+                    // 현재 currentRoom과 똑같이 맞춰서 강제로 밀어넣습니다.
+                    const tempMsg = { ...msg, room: currentRoom };
+                    addMessage(tempMsg);
                 });
             }
         });
@@ -315,21 +316,18 @@
                 if (!userName) return;
             }
 
-            // 1. 화면 일단 비우기 (새로 그릴 준비)
+            // ⭐️ 순서가 중요합니다!
+            currentRoom = roomName; // 1. 방 이름부터 내 가슴에 새기고
+
             const list = document.getElementById('messages');
-            list.innerHTML = '';
+            list.innerHTML = ''; // 2. 화면 비우기
 
-            // 2. 현재 방 이름 설정 (⭐️ 중요: 요청보다 먼저 해야 함)
-            currentRoom = roomName;
-
-            // 3. UI 전환
+            // UI 전환
             document.getElementById('list-area').style.display = 'none';
             document.getElementById('chat-area').style.display = 'flex';
-            document.getElementById('footer-bar').style.display = 'none';
-            document.getElementById('main-settings-btn').style.display = 'none';
             document.getElementById('room-title').textContent = roomName;
 
-            // 4. 서버에 "이 방 내역 다 줘!" 요청
+            // 3. 그 다음 서버에 요청!
             socket.emit('join room', { room: roomName, name: userName });
         }
 
